cluster/apps/backend/cockroachdb/ingressroute-cockroachdb.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cockroachdb-route
  namespace: networking
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      services:
        - name: cockroachdb
          namespace: cockroachdb
          port: 26257
          kind: Service
  # Use the secret generated by cert-manager
  tls:
    secretName: '${SECRET_DOMAIN/./-}-tls'
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
